syntax = "proto3";

option go_package = "./proto";

service UserService {
    rpc RegisterUser(User) returns (UserResponse);
    rpc LoginUser(LoginRequest) returns (LoginResponse);
    rpc GetUserProfile(UserRequest) returns (UserResponse);
}

message UserSwag {
    string username = 1;
    string email = 2;
    string password_hash = 3;
    Profile profile = 4;
}

message User {
    string user_id = 1;
    string username = 2;
    string email = 3;
    string password_hash = 4;
    Profile profile = 5;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse { 
    string user_id = 1;
    string token = 2;
}

message Profile {
    string name = 1;
    string address = 2;
}

message UserRequest {
    string user_id = 1;
    string token = 2;
}

message UserResponse {
    User user = 1;
}

